一些BuG的修复，新增登录页的UI

--- a/src/assets/styles/resize.scss
+++ b/src/assets/styles/resize.scss
@@ -35,7 +35,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
     line-height: 1;
-    font-family: "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+    font-family: "Inter", "Noto Sans SC", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
