--- a/src/assets/styles/resize.scss
+++ b/src/assets/styles/resize.scss
@@ -38,6 +38,7 @@ body {
     font-family: "Inter", "Noto Sans SC", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-tap-highlight-color: transparent; /* 去除移动端点击高亮 */
 }
 
 ol, ul {
