--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -6,3 +6,4 @@ $btn-bg-color: #005bea;
 $text-primary: #ffffff;
 $text-secondary: rgba(255, 255, 255, 0.6);
 $glass-bg: rgba(255, 255, 255, 0.05);
+$griy-color: #a0a0a0;
