--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,3 +7,4 @@ $text-primary: #ffffff;
 $text-secondary: rgba(255, 255, 255, 0.6);
 $glass-bg: rgba(255, 255, 255, 0.05);
 $griy-color: #a0a0a0;
+$bg-color: rgba(255, 255, 255, 0.02);
